# reschoice

./: .gitignore  CMakeLists.txt  CMakeLists_user.txt  LICENSE.txt  README.md  main.cpp  myExercises  paramlog.txt  vcpkg.json
dev/: README.md  build.sh  run_gprof.sh  run_gprof_NOTREADY.sh  run_lcov.sh  run_valgrind.sh
dev/cmake/: coverage.cmake  profile.cmake  release.cmake  tests.cmake
doc/: OUTPUT.md  PARAMETERS.md  SETUP.md  TESTS.md
docs/: OUTPUT.md  PARAMETERS.md
gprof/: report.txt
lcov/: cmd_line  index-sort-f.html  index-sort-l.html  index.html  lcov.info
lcov/src/: MAIN.cpp.func-c.html  MAIN.cpp.func.html  MAIN.cpp.gcov.html  buffer.cpp.func-c.html  buffer.cpp.func.html  buffer.cpp.gcov.html  buffer.hpp.func-c.html  buffer.hpp.func.html  buffer.hpp.gcov.html  checker.hpp.func-c.html  checker.hpp.func.html  checker.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  individual.cpp.func-c.html  individual.cpp.func.html  individual.cpp.gcov.html  individual.hpp.func-c.html  individual.hpp.func.html  (+25 more)
src/: CMakeLists.txt  MAIN.cpp  MAIN.hpp  analysis.cpp  analysis.hpp  buffer.cpp  buffer.hpp  checker.hpp  individual.cpp  individual.hpp  parameters.cpp  parameters.hpp  population.cpp  population.hpp  printer.cpp  printer.hpp  random.cpp  random.hpp  reader.cpp  reader.hpp  simulation.cpp  simulation.hpp  utilities.cpp  utilities.hpp
tests/: buffer_tests.cpp  checker_tests.cpp  individual_tests.cpp  parameters_tests.cpp  population_tests.cpp  printer_tests.cpp  reader_tests.cpp  tests.cpp  testutils.cpp  testutils.hpp  utilities_tests.cpp
